# nysbot

./: .gitignore  Dockerfile  README.md  create_superuser.py  example.env  modelResponseWebHook.json  pyproject.toml
core/: settings.py
frontbot/: apps.py  get_data_github.py  htmx_views.py  urls.py  views.py
frontbot/templates/frontbot/: base.html  index.html
frontbot/templates/partials/htmx_components/: button_disabled.html  button_trigger.html  check_bot_conclusion.html  check_bot_created_at.html  check_bot_status.html  check_bot_updated_at.html
templates/admin/: base_site.html  login.html
