[project]
name = "nysbot"
version = "0.1.0"
description = ""
authors = [
    {name = "T-Terra",email = "gabst138@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "django (>=5.1.6,<6.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "pip-audit (>=2.8.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
